Revert "Fixed a bug in embed that calculated page height incorrectly by not taking body & inner element margins into account, causing contents to get cut off. Tested and verified that it works in IE 7, 8, 9; FF; Chrome; Safari."
This reverts commit b376145658310502484df95f10a16e9bdae6a86b.

--- a/applications/dashboard/design/style.css
+++ b/applications/dashboard/design/style.css
@@ -3065,7 +3065,3 @@ body.embed .InformMessages {
    height: 24px;
    width: 24px;
 }
-/* Important: ensures margins are respected on embedded comments. */
-.VanillaEmbedWrapper {
-   padding: 1px 0;
-}
